Fixed spacing, removed socials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,7 +1341,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   main {
-    margin-top: 60px;
+    margin-top: 30px;
     margin-bottom: 100px;
   }
 
@@ -1848,7 +1848,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar {
     position: sticky;
-    top: 60px;
+    top: 30px;
     max-height: max-content;
     height: 100%;
     margin-bottom: 0;
